// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package types;
option java_package = "org.libra.grpc.types";

message AccessPath {
  bytes address = 1;
  bytes path = 2;
}
